fix: improve nav hyperlink contrast

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ hr.skinny { margin: 1em 0 }
 
 blockquote {padding: 0 0 0 0.75em;color: #777}
 
-small, .menu, .caption {color: #9e9e9e;font-weight: 400;}
+small, .caption {color: #9e9e9e;font-weight: 400;}
 sup {font-size: 0.83;line-height: 0;vertical-align: super;}
 
 .entry {position: relative;}
@@ -46,7 +46,7 @@ sup {font-size: 0.83;line-height: 0;vertical-align: super;}
 #logo:hover {opacity: 0.8;background: none;color: inherit;}
 #logo:active {opacity: 0.75}
 
-a.menu {margin-right: 0em;line-height: 1.75}
+nav a {margin-right: 0em;line-height: 1.75;}
 
 a.row {
   display: block;
@@ -653,11 +653,11 @@ a.header-hash:hover {
   font-size: 1.5em;
 }
 
-.header a.menu.is-active {
+.header nav a.is-active {
   position: relative;
 }
 
-.header a.menu.is-active::before {
+.header nav a.is-active::before {
   content: "";
   position: absolute;
   left: .5em;
